--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,8 @@
 !/.emacs.d/
 !/.emacs.d/init.el
 !/.emacs.d/conf/
-!/.emacs.d/conf/*
+!/.emacs.d/conf/*.el
+!/.emacs.d/conf/*.elc
 !/.zshrc
 !/.zsh.d/
 !/.zsh.d/migemo
