Gitのマージで--no-ffをデフォルトに設定

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,8 @@
 	autocrlf = true
 	editor = nano
 	pager = lv
+[merge]
+	ff = false
 [alias]
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	la = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
