Gitでpull --rabaseをデフォルトに設定

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,8 @@
 	pager = lv
 [merge]
 	ff = false
+[branch]
+	autosetuprebase = always
 [alias]
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	la = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
