マージ済みブランチを削除するエイリアスを追加

--- a/.gitconfig
+++ b/.gitconfig
@@ -15,5 +15,6 @@
 	br = branch
 	co = checkout
 	df = diff -w
+	delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d; };f"
 [include]
 	path = .gitconfig.local
