--- a/.gitconfig
+++ b/.gitconfig
@@ -15,6 +15,7 @@
 	br = branch
 	co = checkout
 	df = diff -w
+	update = add --update
 	delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d; };f"
 [include]
 	path = .gitconfig.local
