--- a/.gitconfig
+++ b/.gitconfig
@@ -24,7 +24,7 @@
 	br = branch
 	co = checkout
 	df = diff -w
-	wd = diff -w --color-words
+	dw = diff -w --color-words
 	update = add --update
 	delete-merged-branch = "!f () { git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d; };f"
 [include]
