--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 	attributesfile = ~/.gitattributes_global
-	autocrlf = true
+	autocrlf = input
 	editor = /app/cygwin/emacs/bin/emacs -q -nw -l ${HOME}/.emacs.d/init-mini.el
 	pager = nkf -w | LESSCHARSET=utf-8 less -x4
 [i18n]
