Revert "gitの改行コード自動変換をinputに変更"
This reverts commit 3335606513c5c8ccf1fc9f1cf31fdd38519808db.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [core]
 	attributesfile = ~/.gitattributes_global
-	autocrlf = input
+	autocrlf = true
 	editor = /app/cygwin/emacs/bin/emacs -q -nw -l ${HOME}/.emacs.d/init-mini.el
 	pager = nkf -w | LESSCHARSET=utf-8 less -x4
 [i18n]
