--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,7 @@
 	autocrlf = true
 	editor = /app/cygwin/emacs/bin/emacs -q -nw -l ${HOME}/.emacs.d/init-mini.el
 	pager = nkf -w | LESSCHARSET=utf-8 less -x4
+	quotepath = false
 [i18n]
 	commitencoding = utf-8
 	logoutputencoding = utf-8
