--- a/.gitconfig
+++ b/.gitconfig
@@ -1,7 +1,7 @@
 [core]
 	attributesfile = ~/.gitattributes_global
 	autocrlf = true
-	editor = /app/cygwin/emacs/bin/emacs -q -nw -l ${HOME}/.emacs.d/init-mini.el
+	editor = ${EDITOR}
 	pager = nkf -w | LESSCHARSET=utf-8 less -x4
 	quotepath = false
 [i18n]
@@ -17,7 +17,7 @@
 	old = red reverse
 	new = green reverse
 [diff "cpp"]
-	wordRegex = "[a-zA-Z_][a-zA-Z0-9_]*|[-+0-9.e]+[fFlL]?|0[xXbB]?[0-9a-fA-F]+[lLuU]*|[-+*/<>%&^|=!]=|--|\\+\\+|<<=?|>>=?|&&|\\|\\||::|->\\*?|\\.\\*|[^[:space:]]"
+	wordRegex = "[a-zA-Z_][a-zA-Z0-9_]*|[-+0-9.e]+[fFlL]?|0[xXbB]?[0-9a-fA-F]+[lLuU]*|[-+*/<>%&^|=!]=|--|\\+\\+|<<=?|>>=?|&&|\\|\\||::|->[a-zA-Z_][a-zA-Z0-9_]*|\\.\\*|[^[:space:]]|[[ソ]+]"
 [diff "docx"]
 	binary = true
 	textconv = ~/bin/docx2txt/docx2txt
@@ -31,12 +31,10 @@
 	autosetuprebase = always
 [alias]
 	lg = log --pretty=format:'%x09%C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s' --abbrev-commit --date=short --graph
-	la = log --pretty=format:'%x09%C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s' --abbrev-commit --date=short --all --graph
+	la = log --pretty=format:'%x09%C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s' --abbrev-commit --date=short --graph --all
 	lf = log --pretty=format:'■ %C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short -p --name-status
-	lgu = log --pretty=format:'Commit: %C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short -p --encoding=utf-8
-	lgs = log --pretty=format:'Commit: %C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short -p --encoding=shift-jis
-	s = log -p --name-status --pretty=format:'■ %C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short -S
-	g = log -p --name-status --pretty=format:'■ %C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short -G
+	lgu = log --pretty=format:'Commit: %C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short -p --reverse --encoding=utf-8
+	lgs = log --pretty=format:'Commit: %C(ul red)%h%Creset %C(green)%cd%Creset -%C(yellow)%d%Creset %s %C(bold blue)<%an>%Creset' --abbrev-commit --date=short -p --reverse --encoding=shift-jis
 	ci = commit
 	cm = commit -m
 	st = status --short --branch
@@ -45,7 +43,6 @@
 	df = diff -w
 	dw = diff -w --color-words
 	dwr = diff -w --color-words --word-diff-regex='\\w+|[^[:space:]]'
-	update = "!if [ $(git diff --cached --name-only | wc --line) -eq 0 ]; then git add --update; else echo already stageed; fi"
 	delete-merged-branch = "!git checkout $1; git branch --merged|egrep -v '\\*|develop|master'|xargs git branch -d;"
 [include]
 	path = .gitconfig_local
