--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,14 @@
 [core]
 	autocrlf = false
 	quotepath = false
+	pager = delta
+[interactive]
+	diffFilter = delta --color-only
+[delta]
+	navigate = true  # use n and N to move between diff sections
+	light = false    # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+	side-by-side = true
+	line-numbers = false
 [diff]
 	algorithm = histogram
 [merge]
