--- a/.gitconfig
+++ b/.gitconfig
@@ -18,12 +18,24 @@
 [alias]
 	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
 	la = log --graph --all --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
+	ad = add
 	ci = commit
 	cm = commit -m
 	st = status
 	br = branch
 	co = checkout
-	df = diff -w
+	d1 = diff HEAD~
+	d2 = diff HEAD~~
+	d3 = diff HEAD~~~
+	d4 = diff HEAD~~~~
+	d5 = diff HEAD~~~~~
+	dc = diff --cached
+	df = diff
+	ds = diff --staged
+	dw = diff -w
+	fe = fetch
+	pl = pull
+	st = status
 [includeIf "gitdir:~/repos/"]
 	path = ~/.gitconfig_mainuser
 [includeIf "gitdir:~/subrepos/"]
