Disable ControlMaster in ssh tunnel.* hosts

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,5 +1,8 @@
 Include ~/.ssh/conf.d/*.conf
 
+Host tunnel.*
+    ControlMaster no
+
 Host *
     ControlMaster auto
     ControlPath ~/.ssh/%r@%h:%p.sock
