Add git user to ssh_config

--- a/.ssh/config
+++ b/.ssh/config
@@ -3,6 +3,9 @@ Include ~/.ssh/conf.d/*.conf
 Host tunnel.*
     ControlMaster no
 
+Host git@*
+    User git
+
 Host *
     ControlMaster auto
     ControlPath ~/.ssh/%r@%h:%p.sock
