Change ControlPath/ControlPersist for ssh

--- a/.ssh/config
+++ b/.ssh/config
@@ -8,8 +8,8 @@ Host git@*
 
 Host *
     ControlMaster auto
-    ControlPath ~/.ssh/%r@%h:%p.sock
-    ControlPersist 15
+    ControlPath /run/shm/user/%u/.ssh_%r@%h:%p.sock
+    ControlPersist 5
     IdentityFile ~/.ssh/id_gpg.pub
     IdentitiesOnly yes
     ServerAliveInterval 60
