--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,7 +1,7 @@
-default-cache-ttl 86400
+default-cache-ttl 600
 default-cache-ttl-ssh 86400
-max-cache-ttl 604800
-max-cache-ttl-ssh 604800
+max-cache-ttl 86400
+max-cache-ttl-ssh 15552000
 min-passphrase-len 10
 pinentry-program "/mnt/c/Program Files (x86)/Gpg4win/bin/pinentry.exe"
 allow-preset-passphrase
