Change ssh config for systemd

--- a/.ssh/config
+++ b/.ssh/config
@@ -10,6 +10,7 @@ Host *
     ControlMaster auto
     ControlPath /run/shm/user/%u/.ssh_%r@%h:%p.sock
     ControlPersist 5
+    IdentityAgent "/run/user/1000/gnupg/S.gpg-agent.ssh"
     IdentityFile ~/.ssh/id_gpg.pub
     IdentitiesOnly yes
     ServerAliveInterval 60
