Change value in gpg-agent.conf

--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -1,8 +1,24 @@
-default-cache-ttl 600
+# Lifetime of passphrase cache from point of last use.
+# This lifetime can be extended by using cache.
+# 86400 = 1 day
+default-cache-ttl 86400
 default-cache-ttl-ssh 86400
-max-cache-ttl 86400
+
+# Lifetime of passphrase cache from point of caching.
+# default-cache-ttl does not extend more than this time.
+# 15552000 = 180 days
+max-cache-ttl 15552000
 max-cache-ttl-ssh 15552000
-min-passphrase-len 10
-pinentry-program "/mnt/c/Program Files (x86)/Gpg4win/bin/pinentry.exe"
+
+# Symbolic links from following paths to absorb environmental differences
+# of the real paths to pientry.
+pinentry-program "~/.gnupg/bin/pinentry.exe"
+
+# Allow to use `gpg-preset-passphrase` command.
 allow-preset-passphrase
+
+# Allow to use gpg-agent for ssh-agent.
 enable-ssh-support
+
+# Warn if enter new passphrase shorter than this length.
+min-passphrase-len 10
