Change pinentry-program setting

--- a/.gnupg/gpg-agent.conf
+++ b/.gnupg/gpg-agent.conf
@@ -10,9 +10,8 @@ default-cache-ttl-ssh 86400
 max-cache-ttl 15552000
 max-cache-ttl-ssh 15552000
 
-# Symbolic links from following paths to absorb environmental differences
-# of the real paths to pientry.
-pinentry-program "~/.gnupg/bin/pinentry.exe"
+# Create symbolic link if pinentry is in another path.
+pinentry-program "/usr/local/bin/pinentry"
 
 # Allow to use `gpg-preset-passphrase` command.
 allow-preset-passphrase
