--- a/.ssh/config
+++ b/.ssh/config
@@ -8,9 +8,9 @@ Host git@*
 
 Host *
     ControlMaster auto
-    ControlPath /run/shm/user/%u/.ssh_%r@%h:%p.sock
+    ControlPath ${XDG_RUNTIME_DIR}/ssh-%r@%h:%p.sock
     ControlPersist 5
-    IdentityAgent "/run/user/1000/gnupg/S.gpg-agent.ssh"
+    IdentityAgent "${XDG_RUNTIME_DIR}/gnupg/S.gpg-agent.ssh"
     IdentityFile ~/.ssh/id_gpg.pub
     IdentitiesOnly yes
     ServerAliveInterval 60
