[git] Set defaultBranch to main

--- a/.gitconfig
+++ b/.gitconfig
@@ -3,6 +3,8 @@
 	filemode = true
 	quotepath = false
 	pager = delta
+[init]
+	defaultBranch = main
 [interactive]
 	diffFilter = delta --color-only
 [delta]
