Disable gpg-agent for ssh-tunnel

--- a/.ssh/config
+++ b/.ssh/config
@@ -1,6 +1,8 @@
 Include ~/.ssh/conf.d/*.conf
 
 Host tunnel.*
+    IdentityAgent none
+    IdentityFile ~/.ssh/id_tunnel
     ControlMaster no
 
 Host git@*
