--- a/.gitconfig
+++ b/.gitconfig
@@ -40,8 +40,10 @@
 	pl = pull
 	st = status
 [credential]
-	helper = cache --timeout 15552000
+	helper = cache
 	helper = git-credential-manager
+	credentialStore  = cache
+	cacheOptions  = "--timeout 15552000"
 
 # Machine specified configuration
 [includeIf "gitdir:"]
