Remove trailing slash in XDG_RUNTIME_DIR (for WSL)

--- a/.ssh/config
+++ b/.ssh/config
@@ -10,9 +10,9 @@ Host git@*
 
 Host *
     ControlMaster auto
-    ControlPath ${XDG_RUNTIME_DIR}ssh-%r@%h:%p.sock
+    ControlPath ${XDG_RUNTIME_DIR}/ssh-%r@%h:%p.sock
     ControlPersist 5
-    IdentityAgent "${XDG_RUNTIME_DIR}gnupg/S.gpg-agent.ssh"
+    IdentityAgent "${XDG_RUNTIME_DIR}/gnupg/S.gpg-agent.ssh"
     IdentityFile ~/.ssh/id_gpg.pub
     IdentitiesOnly yes
     ServerAliveInterval 60
