--- a/.ssh/config
+++ b/.ssh/config
@@ -12,7 +12,7 @@ Host *
     ControlMaster auto
     ControlPath ${XDG_RUNTIME_DIR}/ssh-%r@%h:%p.sock
     ControlPersist 5
-    IdentityAgent "${XDG_RUNTIME_DIR}/gnupg/S.gpg-agent.ssh"
+    IdentityAgent "${SSH_AUTH_SOCK}"
     IdentityFile ~/.ssh/id_gpg.pub
     IdentitiesOnly yes
     ServerAliveInterval 60
